--- a/2 - Desenvolvimento Web Front End - Essencial/Atividade 4 - Pagina de Perfil Pessoal/css/styles.css
+++ b/2 - Desenvolvimento Web Front End - Essencial/Atividade 4 - Pagina de Perfil Pessoal/css/styles.css
@@ -77,7 +77,7 @@
 }
 
 .text-gradient {
-  background: linear-gradient(90deg,var(--main-font-color), var(--theme-color-1), var(--theme-color-2));
+  background: linear-gradient(90deg,var(--main-font-color), var(--theme-color-1), var(--theme-color-2), #fff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -131,6 +131,12 @@
 
 .skill-title{
   padding: 2.5rem 0rem;
+}
+
+.skill-title, .projects-title {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 3rem;
 }
 
 .tech-marquee {
@@ -250,6 +256,98 @@
   background-color: #9c9696;
 }
 
+.projects-section {
+  padding: 4rem 1rem;
+  width: 100%;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.project-card {
+  background-color: #1a1a1a;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+}
+
+.project-card img {
+  width: 50%;
+  height: 50%;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  align-self: center;
+  object-fit: cover;
+}
+
+.project-title{
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.project-description {
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.project-tech {
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+  color: var(--main-font-color);
+}
+
+.project-buttons {
+  width: 100%;
+  max-width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
+.project-btn {
+  max-width: 40%;
+  background-color: #000000;
+  color: #fff;
+  padding: 0.8rem 1.2rem;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  gap: 0.5rem;
+  transition: background-color 0.6s ease;
+  transition: color 0.6s ease;
+}
+
+.project-btn a{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-btn:hover {
+  background-color: var(--contrast-text);
+  color: var(--hover-text)
+}
 
 
 @keyframes scroll-left {
@@ -269,10 +367,10 @@
   }
 
   .about-left {
-  width: 100%;
-  max-width: 100%;
-  display: flex;
-  justify-content: center;
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .about-right {
@@ -289,5 +387,11 @@
     max-width: 80%;
     height: 15rem;
     margin-bottom: 2rem;
+  }
+
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
   }
 }
