--- a/2 - Desenvolvimento Web Front End - Essencial/Atividade 4 - Pagina de Perfil Pessoal/assets/css/styles.css
+++ b/2 - Desenvolvimento Web Front End - Essencial/Atividade 4 - Pagina de Perfil Pessoal/assets/css/styles.css
@@ -1,23 +1,32 @@
 :root{
-    --main-font-color:#F9E6CF;
-    --header-background-color-1:#000000;
-    --header-background-color-2:#1a1a1a;
+    --text-color:#F9E6CF;
+    --header-and-footer-color-1:#000000;
+    --header-and-footer-color-2:#1a1a1a;
+    --card-project-color:#413e3e86;
     --theme-color-1:#800020;
     --theme-color-2:#ff0000;
     --contrast-text:#cf0c0c;
-    --hover-text:black;
+    --hover-text:#000000;
+    --button-color-1:#000000;
+    --button-color-1:#800020;
+    --swiper-navigation-color:#cf0c0c;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .container{
-    width: 90%;
-    margin: 0 auto;
-    max-width: 100%;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 .custom-background {
@@ -40,6 +49,10 @@
   justify-content: space-between;
   gap: 2rem;
   align-items: center;
+  padding: 1rem 0rem;
+}
+
+.about-section, .skills-section, .projects-section, .footer-container {
   padding: 2rem 0rem;
 }
 
@@ -53,33 +66,46 @@
 .profile-photo {
   width: 100%;
   max-width: 250px;
-  aspect-ratio: 1/1;
-  object-fit: cover;
-  border-radius: 50%;
+  object-fit:fill;
+  border-radius: 15%;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 .about-right {
   width: 70%;
   max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .about-right h1 {
   font-size: 2.5rem;
   margin-bottom: 0.2rem;
-  color: var(--main-font-color);
+  color: var(--text-color);
+  align-self: center;
+  text-align: center;
+
 }
 
 .about-right h2 {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   margin-bottom: 1rem;
-  width: 40%;
+  align-self: center;
+  text-align: center;
+  flex-wrap: wrap;
 }
 
 .text-gradient {
-  background: linear-gradient(90deg,var(--main-font-color), var(--theme-color-1), var(--theme-color-2), #fff);
-  -webkit-background-clip: text;
+  background: linear-gradient(90deg, var(--text-color), var(--theme-color-1), var(--theme-color-2), var(--text-color));
+  background-clip: text;
+  -webkit-background-clip: text; 
+  color: transparent;
   -webkit-text-fill-color: transparent;
+}
+
+h2 .text-gradient{
+  width: 100%;
 }
 
 .text-emphasis{
@@ -91,7 +117,7 @@
   margin-bottom: 1rem;
   font-size: 1.2rem;
   line-height: 1.6;
-  color: var(--main-font-color);
+  color: var(--text-color);
 }
 
 .about-buttons {
@@ -106,43 +132,37 @@
   text-decoration: none;
   border-radius: 8px;
   font-weight: bold;
-  color: #fff;
-  background-color: var(--header-background-color-1);
+  color: var(--text-color);
+  background-color: var(--button-color-2);
   transition: background 0.3s ease;
   border: 2px solid var(--theme-color-1)
 }
 
-.btn:hover {
-  background-color: var(--theme-color-2);
-  color: black;
-}
-
-.btn-outline {
-  background-color: transparent;
-  color: white;
-  background-color: var(--theme-color-1);
+.btn-contact {
+  color: var(--text-color);
+  background-color: var(--button-color-1);
   border: 2px solid black;
 }
 
-.btn-outline:hover {
+.btn:hover {
   background-color: var(--theme-color-2);
-  color: black;
+  color: var(--hover-text);
 }
 
-.skill-title{
-  padding: 2.5rem 0rem;
+.btn-contact:hover {
+  background-color: var(--theme-color-2);
+  color: var(--hover-text);
 }
 
 .skill-title, .projects-title {
   text-align: center;
   font-size: 2.5rem;
-  margin-bottom: 3rem;
+  padding: 2.5rem 0rem;
 }
 
-.tech-marquee {
+.skills-section {
   overflow: hidden;
   width: 100%;
-  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -158,14 +178,14 @@
 
 .tech-card, .soft-skill-card {
   min-width: 120px;
-  height: 140px;
+  min-height: 140px;
   border-radius: 1rem;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: black;
+  color: var(--hover-text);
   font-family: sans-serif;
   transition: transform 0.6s ease;
 }
@@ -174,6 +194,7 @@
   width: 50px;
   height: 50px;
   margin-bottom: 0.5rem;
+  margin-top: 2rem;
 }
 
 .tech-card:hover, .soft-skill-card:hover {
@@ -190,75 +211,96 @@
 .soft-skill-card{
   min-width: 15rem;
   max-width: 20%;
-  margin: 0rem 1rem 1rem 1rem;
-  height: 12.5rem;
-  background-color: #fff;
-  color: var(--main-font-color);
-  opacity: 0.6;
-  transition: opacity ease 0.6s;
+  height: 15rem;
+  color:var(--text-color);
+  background-color: var(--header-and-footer-color-1);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 1rem;
+}
+
+.soft-skill-card::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--theme-color-1);
+  opacity: 0.4;
+  transition: opacity 0.6s ease;
+  transition: background-color 0.6s ease;
+  box-shadow: 0;
+  border-radius: 1rem;
+}
+.soft-skill-card:hover::after{
+  opacity: 0.01;
+  background-color:var(--text-color);
 }
 
 .soft-skill-card img{
+  margin-top: 1rem;
   max-width: 100%;
+  width: 90%;
   max-height:70%;
-  margin-bottom: 0.5rem;
 }
 
 .soft-skill-card p{
-  color: var(--theme-color-1);
-  font-weight: bolder;
+  margin: 1rem;
   max-width: 100%;
+  opacity: 0; 
+  transition: opacity 0.3s ease;
+  transition: color 0.3s ease;
   text-align: center;
+  color: var(--text-color);
 }
 
-
-.soft-skill-card:hover{
-  opacity: 1;
+.soft-skill-card:hover p{
+  opacity: 1; 
+  color: var(--text-color);
 }
 
-.html-card{
+#html-card{
   background-color: #E34F26;
 }
 
-.css-card{
+#css-card{
   background-color: #663399;
 }
 
-.javascript-card{
+#javascript-card{
   background-color: #F7DF1E;
 }
 
-.mysql-card{
+#mysql-card{
   background-color: #4479A1;
 }
 
-.react-card{
+#react-card{
   background-color: #61DAFB;
 }
 
-.postgresql-card{
+#postgresql-card{
   background-color: #4169E1;
 }
 
-.spring-card{
+#spring-card{
   background-color: #6DB33F;
 }
 
-.java-card{
+#java-card{
   background-color: #ffffff;
 }
 
-.git-card{
+#git-card{
   background-color: #F05032;
 }
 
-.github-card{
+#github-card{
   background-color: #9c9696;
 }
 
-.projects-section {
-  padding: 4rem 1rem;
-  width: 100%;
+.projects-section{
+  padding-bottom: 6rem;
 }
 
 .projects-grid {
@@ -267,18 +309,19 @@
   gap: 2rem;
   justify-content: center;
   align-items: center;
-  
+  padding: 2rem 0rem;
 }
 
 .project-card {
-  background-color: #1a1a1a;
+  background-color: var(--card-project-color);
   border-radius: 1rem;
   padding: 1.5rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
-  color: #fff;
+  color: var(--text-color);
   transition: transform 0.3s ease;
+  height: 100%;
 }
 
 .project-card:hover {
@@ -294,21 +337,31 @@
   object-fit: cover;
 }
 
+.project-card p{
+  color: var(--text-color);
+}
+
 .project-title{
   font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+  color: var(--text-color);
 }
 
 .project-description {
   margin-bottom: 1rem;
   font-size: 1rem;
   line-height: 1.5;
+  height: 80%;
+}
+
+.project-description, .project-title{
+  text-align: center;
 }
 
 .project-tech {
   font-size: 0.9rem;
   margin-bottom: 1rem;
-  color: var(--main-font-color);
+  color: var(--text-color);
+  height: 20%;
 }
 
 .project-buttons {
@@ -317,12 +370,13 @@
   display: flex;
   justify-content: flex-start;
   gap: 2rem;
+  color: var(--text-color);
 }
 
 .project-btn {
   max-width: 40%;
-  background-color: #000000;
-  color: #fff;
+  background-color: var(--header-and-footer-color-1);
+  color: var(--text-color);
   padding: 0.8rem 1.2rem;
   border-radius: 8px;
   text-decoration: none;
@@ -359,7 +413,6 @@
   }
 }
 
-
 @media(max-width: 600px){
   .about-section{
     display: flex;
@@ -386,12 +439,58 @@
     width: 80%;
     max-width: 80%;
     height: 15rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
   }
+
+  .skills-section{
+    padding-bottom: 0.5rem;
+}
 
   .projects-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 2rem;
   }
+
+  .project-card img {
+    width: 80%;
+  }
 }
+
+.swiper {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+@media(max-width: 900px){
+  .about-section{
+    display:flex;
+    flex-direction: column;
+  }
+  .about-right {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media(max-width: 500px){
+  .about-buttons{
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+
+
