--- a/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Filmes.css
+++ b/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Filmes.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .main-container{
   max-width: 100%;
   width: 100%;
@@ -9,7 +15,7 @@
   width: 94%;
   grid-template-columns: repeat(4, 1fr); 
   grid-template-rows: repeat(5, auto);
-  gap: 16px;
+  gap: 10px;
   margin-top: 20px;
   align-self: center;
   justify-self: center;
@@ -18,22 +24,31 @@
 .movie-item {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: end;
+  justify-content: space-between;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.555);
+  padding: 5%;
 }
 
 .buttons-align{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
+  width: 100%;
+  max-height: 10%;
+  display: flex;
+  justify-content: space-around;
 }
 
-@media(max-width: 700px){
+@media(max-width: 1000px){
   .movies-grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     grid-template-rows: repeat(10, auto);
   }
-
-  
 }
+
+@media(max-width: 600px){
+  .movies-grid{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); 
+    grid-template-rows: repeat(20, auto);
+  }
+}  
