--- a/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/BotaoDetalhes.css
+++ b/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/BotaoDetalhes.css
@@ -1,12 +1,13 @@
 .button-details{
-  width: 40%;
-  max-width: 40%;
-  border-radius: 7%;
-  padding: 8%;
-  color: black;  
-  font-size: 0.8rem;
-  background-color: aqua;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    width: 40%;
+    max-width: 40%;
+    border-radius: 7%;
+    padding: 8%;
+    font-size: 0.9rem;
+    color: black;  
+    font-weight: bold;
+    background-color: var(--aqua-accent);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
