--- a/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/BotaoFavoritar.css
+++ b/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/BotaoFavoritar.css
@@ -1,12 +1,13 @@
 .favorite-button{
-  width: 40%;
-  max-width: 40%;
-  border-radius: 7%;
-  padding: 8%;
-  font-size: 0.8rem;
-  color: rgb(255, 255, 255);  
-  background-color: rgb(240, 6, 162);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    width: 40%;
+    max-width: 40%;
+    border-radius: 7%;
+    padding: 8%;
+    font-size: 0.9rem;
+    color: white;  
+    font-weight: bold;
+    background-color: var(--pink-accent);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
