--- a/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Favoritos.css
+++ b/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Favoritos.css
@@ -5,18 +5,8 @@
   grid-template-columns: repeat(4, 1fr); 
   grid-template-rows: repeat(2, auto);
   gap: 10px;
-  margin-top: 20px;
   align-self: center;
   justify-self: center;
-}
-
-.movie-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.555);
-  padding: 5%;
 }
 
 .buttons-align{
@@ -41,3 +31,13 @@
     grid-template-rows: repeat(8, auto);
   }
 }  
+
+.not-found-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  background-color: var(--black-glossy);
+  color: var(--red-accent);
+  height: 100vh;
+}
