--- a/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Filmes.css
+++ b/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Filmes.css
@@ -5,7 +5,6 @@
   grid-template-columns: repeat(4, 1fr); 
   grid-template-rows: repeat(5, auto);
   gap: 10px;
-  margin-top: 20px;
   align-self: center;
   justify-self: center;
 }
@@ -15,7 +14,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.555);
+  background-color: var(--black-matte);
   padding: 5%;
 }
 
@@ -41,3 +40,13 @@
     grid-template-rows: repeat(20, auto);
   }
 }  
+
+.movie-message-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  background-color: var(--black-glossy);
+  color: var(--red-accent);
+  height: 100vh;
+}
