--- a/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Paginacao.css
+++ b/3 - Desenvolvimento Web com React/Atividade 5 - Consumo de API com ReactJS/src/css/Paginacao.css
@@ -2,11 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px 0;
+  padding: 2% 0px;
   gap: 12px;
 }
 
 .pagination button {
   padding: 6px 12px;
   cursor: pointer;
+}
+
+.pagination-text{
+  color: #FFF;
+  font-size: 1rem;
 }
