--- a/3 - Desenvolvimento Web com React/Atividade 6 -  Estilizacao em React - Mini Loja/src/01-CSS-Global/style/Skeleton.css
+++ b/3 - Desenvolvimento Web com React/Atividade 6 -  Estilizacao em React - Mini Loja/src/01-CSS-Global/style/Skeleton.css
@@ -59,12 +59,7 @@
   position: absolute;
   inset: 0;
   transform: translateX(-100%);
-  background: linear-gradient(
-    90deg,
-    transparent,
-    var(--color-skeleton-highlight),
-    transparent
-  );
+  background: linear-gradient(90deg, transparent, var(--color-skeleton-highlight), transparent);
   animation: shimmer 1.2s infinite;
 }
 
